k8s-manifests/app-test/03-demo-app.yaml
################################################################################
# Demo App - Simple Nginx
################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx
  namespace: app-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-nginx
  template:
    metadata:
      labels:
        app: demo-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-service
  namespace: app-test
spec:
  selector:
    app: demo-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
