k8s-manifests/app-test/05-ingress.yaml
################################################################################
# ALB Ingress for app-test namespace
################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-test-ingress
  namespace: app-test
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-web-service
                port:
                  number: 80
